Moved up.pl to Upm4win
and changed name in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name = Upm4win
+name = Sumu-Windows-Upm4win
 version = 0.0.8
 author = SuMu
 license = Perl_5
@@ -13,3 +13,6 @@ copyright_holder = SuMu
 ;;[GatherDir]
 
 exclude_filename = .gitignore
+exclude_filename = up.up.test
+exclude_filename = dist.ini
+exclude_filename = 
