013 dist: Removed GatherDir
Changed dist name to Sumu::Windows::Upm4win

Deleted UserPass* dir.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Sumu-Windows-Upm4win
-version = 0.0.8
+version = 0.1.3
 author = SuMu
 license = Perl_5
 copyright_holder = SuMu
@@ -11,8 +11,7 @@ copyright_holder = SuMu
 [@Classic]
 
 ;;[GatherDir]
+;exclude_filename = .gitignore
+;exclude_filename = up.up.test
+;exclude_filename = dist.ini
 
-exclude_filename = .gitignore
-exclude_filename = up.up.test
-exclude_filename = dist.ini
-exclude_filename = 
